Revision history for MooseX-Types-Structured

0.06    06 November 2008
        - Added a 'helper' type constraint called Optional. See docs for more.
        - added lots of tests to cover the API better, coverage and fixes for
          the ->parameterize method in particular have been clarified.
        - changes so that the type contraints are more forgiving when null
          values appear in method calls.
        - used ->make_immutable which should speed up the constraints.
        - removed some unnecessary calls to use Moose when I wasn't using Moose.
        - lots of little code cleanup work and more internal documentation.
        - This version requires a newer Moose than previous versions.  The
          Makefile.PL has been updated to reflect this.
        
0.05    08 November 2008
        - Fixed some wackiness in the documentation.
        
0.04    07 November 2008
        - Bumped minimum required versions of Moose and MooseX-Types to solve
          problem with overloading and type constraint names (issue resolved
          in Moose code.)
        - Changed the way the required Perl version string is used to increase
          compatibility and lowered minimum required Perl

0.03    29 October 2008
        - Fixed incorrect Perl version string (rafl)
        - hide the meta classes from pause.  This should clarify which POD is
          the right one to read and also I want to discourage people from
          subclassing that stuff since it will probably change
        - various documentation cleanup
        - new test 'example.t' with runable versions of the code in the example
          POD section.
        
0.02    28 October 2008
        - cleared up some typos in the test suite
        - Fixed some POD formatting issues, mostly some dumb tabs I ended up
          with when I switched editors.  Added a bit more documentation
        
0.01    27 October 2008
        - Completed basic requirements, documentation and tests.