@@ -10,7 +10,8 @@ Revision history for MooseX-Types-Structured
         - removed some unnecessary calls to use Moose when I wasn't using Moose.
         - lots of little code cleanup work and more internal documentation.
         - This version requires a newer Moose than previous versions.  The
-          Makefile.PL has been updated to reflect this.
+          Makefile.PL has been updated to reflect this.  This is a required
+          update.
         
 0.05    08 November 2008
         - Fixed some wackiness in the documentation.
